逻辑大调整

--- a/conf/nginx_parse.conf
+++ b/conf/nginx_parse.conf
@@ -18,3 +18,10 @@ Include = ["[]"]
 IncludeNo = ["(", ")"]
 Fields = []
 MacroExpand = false
+
+[[ParseList]]
+StructName = "ngx_http_module_t"
+Include = ["=","{"]
+IncludeNo = ["(", ")"]
+Fields = []
+MacroExpand = false
