实现nginx源码下载，结构调整

--- a/conf/nginx_parse.conf
+++ b/conf/nginx_parse.conf
@@ -1,27 +1,5 @@
-[[ParseList]]
-StructName = "ngx_command_t"
-Include = ["[]"]
-IncludeNo = ["(", ")"]
-Fields = []
-MacroExpand = false
+#需要单独展示的结构体名称
+StructName = ["ngx_command_t","ngx_module_t","ngx_http_variable_t","ngx_http_module_t"]
 
-[[ParseList]]
-StructName = "ngx_module_t"
-Include = ["=","{"]
-IncludeNo = ["(", ")"]
-Fields = [5,6,7,8]
-MacroExpand = true
-
-[[ParseList]]
-StructName = "ngx_http_variable_t"
-Include = ["[]"]
-IncludeNo = ["(", ")"]
-Fields = []
-MacroExpand = false
-
-[[ParseList]]
-StructName = "ngx_http_module_t"
-Include = ["=","{"]
-IncludeNo = ["(", ")"]
-Fields = []
-MacroExpand = false
+#源码下载地址
+SourceCodeUrl = "https://github.com/nginx/nginx/archive/master.zip"
